WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159280
[iOS] Process suspension is prevented for 30 seconds after closing a tab
https://bugs.webkit.org/show_bug.cgi?id=159280
Summary
[iOS] Process suspension is prevented for 30 seconds after closing a tab
Chris Dumez
Reported
2016-06-29 15:54:07 PDT
Process suspension is prevented for 30 seconds after closing a tab due to ConnectionTerminationWatchdog holding a background assertion.
Attachments
Patch
(4.83 KB, patch)
2016-06-29 16:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.28 KB, patch)
2016-06-29 17:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch without Gavin's refactoring
(6.23 KB, patch)
2016-06-29 18:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch with Gavin's refactoring
(8.50 KB, patch)
2016-06-29 19:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.68 KB, patch)
2016-06-30 12:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-29 15:54:27 PDT
<
rdar://problem/27014867
>
Chris Dumez
Comment 2
2016-06-29 16:11:30 PDT
Created
attachment 282385
[details]
Patch
WebKit Commit Bot
Comment 3
2016-06-29 16:13:48 PDT
Attachment 282385
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:156: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4
2016-06-29 17:00:47 PDT
Created
attachment 282392
[details]
Patch
WebKit Commit Bot
Comment 5
2016-06-29 17:01:46 PDT
Attachment 282392
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:156: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 6
2016-06-29 18:59:32 PDT
Created
attachment 282407
[details]
Patch without Gavin's refactoring
WebKit Commit Bot
Comment 7
2016-06-29 19:00:56 PDT
Attachment 282407
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:157: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 8
2016-06-29 19:01:22 PDT
The patch fixes the issue. However, I will need to rebaseline after Gavin lands his refactoring patch in
Bug 159284
.
Chris Dumez
Comment 9
2016-06-29 19:34:41 PDT
Created
attachment 282409
[details]
Patch with Gavin's refactoring
WebKit Commit Bot
Comment 10
2016-06-29 19:36:03 PDT
Attachment 282409
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:158: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 11
2016-06-30 11:18:22 PDT
Comment on
attachment 282409
[details]
Patch with Gavin's refactoring View in context:
https://bugs.webkit.org/attachment.cgi?id=282409&action=review
> Source/WebKit2/UIProcess/ProcessAssertion.h:63 > + bool isValid() const { return m_isValid; }
Suggestion – make this an enum with three states – one for uninitialized. Currently while uninitialized this enum disagrees with the state of BKSProcessAssertion.
> Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:158 > + m_assertion.get().invalidationHandler = ^() {
I'm worried about the lifetime of this callback – I think you should reset this in the destructor.
Chris Dumez
Comment 12
2016-06-30 12:26:07 PDT
Created
attachment 282455
[details]
Patch
WebKit Commit Bot
Comment 13
2016-06-30 12:27:49 PDT
Attachment 282455
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertionIOS.mm:158: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 14
2016-06-30 13:17:54 PDT
Comment on
attachment 282455
[details]
Patch Clearing flags on attachment: 282455 Committed
r202696
: <
http://trac.webkit.org/changeset/202696
>
WebKit Commit Bot
Comment 15
2016-06-30 13:17:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug