Source/WebKit2/Platform/spi/ios/AssertionServicesSPI.h
@@ -72,6 +72,7 @@ enum {
 };
 typedef uint32_t BKSProcessAssertionReason;
 
+typedef void (^BKSProcessAssertionInvalidationHandler)(void);
 typedef void (^BKSProcessAssertionAcquisitionHandler)(BOOL acquired);
 
 @interface BKSProcessAssertion : NSObject
@@ -80,6 +81,8 @@ typedef void (^BKSProcessAssertionAcquisitionHandler)(BOOL acquired);
 @interface BKSProcessAssertion ()
 @property (nonatomic, assign) BKSProcessAssertionFlags flags;
 - (id)initWithPID:(pid_t)pid flags:(BKSProcessAssertionFlags)flags reason:(BKSProcessAssertionReason)reason name:(NSString *)name withHandler:(BKSProcessAssertionAcquisitionHandler)handler;
+
+@property (nonatomic, copy) BKSProcessAssertionInvalidationHandler invalidationHandler;
 - (void)invalidate;
 @end
 
