Source/WebKit2/UIProcess/ProcessAssertion.cpp
@@ -30,7 +30,7 @@
 
 namespace WebKit {
 
-ProcessAssertion::ProcessAssertion(pid_t, AssertionState assertionState)
+ProcessAssertion::ProcessAssertion(pid_t, AssertionState assertionState, std::function<void()>)
     : m_assertionState(assertionState)
 {
 }
